tests/positive/Monads/MonadState.juvix
module MonadState;

import Monad open;
import Stdlib.Data.Unit open;

trait
type MonadState (S : Type) (M : Type -> Type) :=
  mkMonadState {
    monad : Monad M;
    get : M S;
    put : S -> M Unit
  };
