tests/negative/issue1337/Braces.juvix
module Braces;

type Nat :=
  | O : Nat
  | S : Nat -> Nat;

open Nat;

fun : Nat -> Nat
  | (S {S {x}}) := x;
